--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.32.1"
   }
